@@ -1,5 +1,12 @@
 2017-07-04  Jeremy Bennett  <jeremy.bennett@embecosm.com>
 
+	* server/GdbServer.cpp (GdbServer::rspCommand): Add "monitor
+	cyclecount".
+	* targets/ri5cy/Ri5cyImpl.h: Correct name of DBG_HIT_SSTH from
+	DBG_HIT_SSTE.
+
+2017-07-04  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
 	* targets/ri5cy/Ri5cyImpl.cpp (Ri5cyImpl::stepInstr): Write
 	DBG_CTRL after flushing pipeline.
 	(Ri5cyImpl::runToBreak): Compute value for DBG_CTRL before
